--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -4,8 +4,8 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='theme-color', content='#009688')
-    meta(name='msapplication-TileColor', content='#009688')
+    meta(name='theme-color', content='#0288d1')
+    meta(name='msapplication-TileColor', content='#0288d1')
     meta(name='msapplication-TileImage', content=config.site.path + 'favicons/ms-icon-144x144.png')
     title= config.site.title
 
