--- a/client/scss/components/setup.scss
+++ b/client/scss/components/setup.scss
@@ -1,6 +1,6 @@
 .setup {
   background-color: #1565c0;
-  background-image: url('../svg/config-bg.svg');
+  background-image: url('../static/svg/config-bg.svg');
   width: 100%;
   min-height: 100%;
   padding-top: 1rem;
