refactor: dev optimizations

--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -25,7 +25,7 @@ html
     link(type='text/css', rel='stylesheet', href=config.site.path + 'css/bundle.css')
 
     //- JS
-    script(type='text/javascript', src=config.site.path + 'js/manifest.js')
+    script(type='text/javascript', src=config.site.path + 'js/runtime.js')
     script(type='text/javascript', src=config.site.path + 'js/vendor.js')
     script(type='text/javascript', src=config.site.path + 'js/client.js')
 
