--- a/server/views/setup.pug
+++ b/server/views/setup.pug
@@ -274,7 +274,7 @@ block body
                     i(v-if='loading')
                   .panel-content.is-text
                     .is-logo
-                      svg.icons.is-64: use(xlink:href='#nc-man')
+                      svg.icons.is-64: use(xlink:href='#nc-man-black')
                       h4 Administrator Account
                     p A root administrator account will be created for local authentication. From this account, you can create or authorize more users.
                   .panel-content.form-sections
