refactor: project cleanup + onboarding page

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -30,6 +30,8 @@
 
 @import 'components/editor';
 
+@import 'pages/welcome';
+
 @import 'layout/_header';
 @import 'layout/_loader';
 @import 'layout/_rtl';
