--- a/client/scss/base/base.scss
+++ b/client/scss/base/base.scss
@@ -16,7 +16,6 @@ html {
   min-height: 100%;
 
   &.is-fullscreen {
-    //width: 100vw;
     height: 100vh;
   }
 }
@@ -27,7 +26,10 @@ body {
 }
 
 main {
-	background-color: lighten(mc('blue-grey','50'), 5%);
+  background-color: mc('blue','500');
+  background-image: linear-gradient(to bottom, mc('blue', '700') 0%, mc('blue', '500') 100%);
+  padding: 50px;
+  min-height: 100vh;
 }
 
 a {
@@ -42,28 +44,8 @@ a {
 
 // Container
 
-.has-stickynav {
-	padding-top: 50px;
-}
-
 .container {
   position: relative;
-
-  @include desktop {
-    margin: 0 auto;
-    max-width: 960px;
-
-    // Modifiers
-    &.is-fluid {
-      margin: 0;
-      max-width: none;
-    }
-  }
-
-
-  @include widescreen {
-    max-width: 1200px;
-  }
 }
 
 .content {
