--- a/server/views/main/welcome.pug
+++ b/server/views/main/welcome.pug
@@ -7,4 +7,4 @@ block body
         img(src='/svg/logo-wikijs.svg', alt='Wiki.js')
         h1= t('welcome.title')
         h2= t('welcome.subtitle')
-        a.button.is-blue(href='/create/home')= t('welcome.createhome')
+        a.button.is-blue(href='/e/home')= t('welcome.createhome')
