feat: insert content speeddial + mobile optimizations

--- a/client/scss/pages/_welcome.scss
+++ b/client/scss/pages/_welcome.scss
@@ -38,6 +38,10 @@
     filter: grayscale(100%) brightness(160%);
     margin-bottom: 3rem;
     z-index: 2;
+
+    @include until($tablet) {
+      width: 300px;
+    }
   }
   h1 {
     margin-bottom: 1rem;
