feat: editor preview emoji + task lists

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -12,7 +12,7 @@
 @import 'components/toggle';
 @import 'components/typography';
 
-@import '../libs/twemoji/twemoji-awesome';
+// @import '../libs/twemoji/twemoji-awesome';
 @import '../libs/prism/prism.css';
 @import 'node_modules/diff2html/dist/diff2html.min';
 
