feat: editor preview tabs, abbr, sup, sub, mark and img size

--- a/client/scss/components/markdown-content.scss
+++ b/client/scss/components/markdown-content.scss
@@ -39,6 +39,10 @@
     font-size: 1.025rem;
   }
 
+  p + p {
+    margin-top: 1rem;
+  }
+
   // --------------------------------------------
   // Code Blocks
   // --------------------------------------------
