--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -23,7 +23,7 @@ html
 
     //- CSS
     link(type='text/css', rel='stylesheet', href=config.site.path + 'css/bundle.css')
-    link(type='text/css', rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
+    link(type='text/css', rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Roboto:400,500,700|Source+Code+Pro:400,700|Material+Icons')
 
     //- JS
     script(type='text/javascript', src=config.site.path + 'js/runtime.js')
