feat: cm editor theme

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -5,6 +5,7 @@
 @import "../libs/animate/animate";
 
 @import 'components/button';
+@import 'components/editor-code';
 @import 'components/markdown-content';
 @import 'components/navigator';
 @import 'components/panel';
