refactor: webpack fixes, missing auth icons, auth resolvers

--- a/client/scss/components/setup.scss
+++ b/client/scss/components/setup.scss
@@ -2,7 +2,7 @@
   background-color: #1565c0;
   background-image: url('../static/svg/config-bg.svg');
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   padding-top: 1rem;
 
   .welcome {
