--- a/server/views/main/setup.pug
+++ b/server/views/main/setup.pug
@@ -2,5 +2,5 @@ extends ../master.pug
 
 block body
   body
-    #app.setup.is-fullscreen
+    #app
       setup(telemetry-id=telemetryClientID, wiki-version=packageObj.version, :langs!=JSON.stringify(data.langs).replace(/"/g, "'"))
