feat: admin - system info

--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -27,8 +27,7 @@ html
 
     block head
 
-    link(href="/css/client.css?c473342a20546c545ebc" rel="stylesheet")
-    script(type="text/javascript" src="/js/runtime.js?c473342a20546c545ebc")
-    script(type="text/javascript" src="/js/client.js?c473342a20546c545ebc" async)
+    script(type="text/javascript" src="/js/runtime.js")
+    script(type="text/javascript" src="/js/client.js")
   body
     block body
