--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -7,7 +7,7 @@
 // @import "../libs/animate/animate";
 
 @import 'components/markdown-content';
-@import 'components/navigator';
+@import 'components/dialog';
 
 // @import '../libs/twemoji/twemoji-awesome';
 @import '../libs/prism/prism.css';
