--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -7,6 +7,7 @@
 // @import "../libs/animate/animate";
 
 @import 'components/markdown-content';
+@import 'components/data-table';
 @import 'components/dialog';
 
 // @import '../libs/twemoji/twemoji-awesome';
