feat: locales remote fetch+ deps update + fixes

--- a/server/views/main/setup.pug
+++ b/server/views/main/setup.pug
@@ -3,4 +3,4 @@ extends ../master.pug
 block body
   body
     #app
-      setup(telemetry-id=telemetryClientID, wiki-version=packageObj.version, :langs!=JSON.stringify(data.langs).replace(/"/g, "'"))
+      setup(telemetry-id=telemetryClientID, wiki-version=packageObj.version)
