refactor: remove config namespaces

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -15,6 +15,7 @@
 // @import 'node_modules/diff2html/dist/diff2html.min';
 
 @import 'pages/welcome';
+@import 'pages/error';
 
 @import 'layout/_rtl';
 
