fix: editor properties UI

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -6,11 +6,13 @@
 // @import "../libs/animate/animate";
 
 @import 'components/markdown-content';
+@import 'components/btn';
 @import 'components/data-table';
 @import 'components/dialog';
 
 // @import '../libs/twemoji/twemoji-awesome';
 @import '../libs/prism/prism.css';
+@import '~vue-tour/dist/vue-tour.css';
 // @import 'node_modules/diff2html/dist/diff2html.min';
 
 @import 'pages/welcome';
