feat: core improvements + local fs provider + UI fixes

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -3,7 +3,7 @@
 @import "base/base";
 @import 'base/icons';
 
-// @import "../libs/animate/animate";
+@import "../libs/animate/animate";
 
 @import 'components/markdown-content';
 @import 'components/btn';
