--- a/server/views/main/welcome.pug
+++ b/server/views/main/welcome.pug
@@ -4,7 +4,9 @@ block body
   #app.is-fullscreen
     v-app
       .onboarding
-        img(src='/svg/logo-wikijs.svg', alt='Wiki.js')
-        h1= t('welcome.title')
-        h2= t('welcome.subtitle')
-        v-btn(color='primary', href='/e/home')= t('welcome.createhome')
+        img.animated.zoomIn(src='/svg/logo-wikijs.svg', alt='Wiki.js')
+        .headline= t('welcome.title')
+        .subheading.mt-3= t('welcome.subtitle')
+        v-btn.mt-5(color='primary', href='/e/home', large)
+          v-icon(left) add
+          span= t('welcome.createhome')
