feat: authentication improvements

--- a/server/views/main/welcome.pug
+++ b/server/views/main/welcome.pug
@@ -4,7 +4,7 @@ block body
   #app.is-fullscreen
     v-app
       .onboarding
-        img.animated.zoomIn(src='/svg/logo-wikijs.svg', alt='Wiki.js')
+        img.animated.fadeIn(src='/svg/logo-wikijs.svg', alt='Wiki.js')
         .headline= t('welcome.title')
         .subheading.mt-3= t('welcome.subtitle')
         v-btn.mt-5(color='primary', href='/e/home', large)
