--- a/client/scss/base/material.scss
+++ b/client/scss/base/material.scss
@@ -309,6 +309,16 @@ $material-colors: (
 	'800': #37474f,
 	'900': #263238,
 	'1000': #11171a
+  ),
+
+  'theme': (
+    'primary': #1976D2,
+    'secondary': #424242,
+    'accent': #82B1FF,
+    'error': #FF5252,
+    'info': #2196F3,
+    'success': #4CAF50,
+    'warning': #FFC107
   )
 );
 
