--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -1,6 +1,8 @@
 /* THEME SPECIFIC STYLES */
 
 .contents {
+  color: mc('grey', '800');
+
   h1 {
     padding-left: 16px;
     color: mc('blue', '800');
@@ -14,7 +16,7 @@
       left: 0;
       width: 100%;
       height: 2px;
-      background: linear-gradient(to right, mc('blue', '500'), rgba(mc('blue', '500'), 0));
+      background: linear-gradient(to right, mc('theme', 'primary'), rgba(mc('theme', 'primary'), 0));
     }
 
     & + h2 {
@@ -41,5 +43,6 @@
   p {
     padding: 16px 16px 0 16px;
     margin: 0;
+    text-align: justify;
   }
 }
