--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -1,9 +1,9 @@
-extends ../master.pug
+extends master.pug
 
 block head
 
 block body
-  #app
+  #root
     page(title='Planet Earth', description='The 3rd planet of the solar system')
       template(slot='contents')
         p Earth is the third planet from the Sun and the only astronomical object known to harbor life. According to radiometric dating and other sources of evidence, Earth formed over 4.5 billion years ago.[24][25][26] Earth's gravity interacts with other objects in space, especially the Sun and the Moon, Earth's only natural satellite. Earth revolves around the Sun in 365.26 days, a period known as an Earth year. During this time, Earth rotates about its axis about 366.26 times.[n 5]
