--- a/server/views/setup.pug
+++ b/server/views/setup.pug
@@ -1,5 +1,5 @@
-extends ../master.pug
+extends master.pug
 
 block body
-  #app
+  #root
     setup(telemetry-id=telemetryClientID, wiki-version=packageObj.version)
