--- a/server/views/welcome.pug
+++ b/server/views/welcome.pug
@@ -1,7 +1,7 @@
-extends ../master.pug
+extends master.pug
 
 block body
-  #app.is-fullscreen
+  #root.is-fullscreen
     v-app
       .onboarding
         img.animated.fadeIn(src='/svg/logo-wikijs.svg', alt='Wiki.js')
