--- a/client/scss/global.scss
+++ b/client/scss/global.scss
@@ -1,7 +1,8 @@
 @charset "utf-8";
 
-$primary: 'indigo';
-
-@import "base/variables";
 @import "base/material";
 @import "base/mixins";
+
+$tablet: 769px !default;
+$desktop: 980px !default;
+$widescreen: 1180px !default;
