--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -1,7 +1,7 @@
-extends ./master.pug
+extends master.pug
 
 block body
-  #app.is-fullscreen
+  #root.is-fullscreen
     v-app(dark)
       .app-error
         v-container
