feat: xterm + UI fixes

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -14,6 +14,7 @@
 @import '../libs/prism/prism.css';
 @import '~vue-tour/dist/vue-tour.css';
 @import '~vue-status-indicator/styles.css';
+@import '~xterm/dist/xterm.css';
 // @import 'node_modules/diff2html/dist/diff2html.min';
 
 @import 'pages/welcome';
